--- a/aboutpage.html
+++ b/aboutpage.html
@@ -11,7 +11,7 @@ form.ui-listview-filter {margin: 0 0% 0 0% !important}
 div[data-role=page].ui-body-c {background: inherit !important;}
 .ui-body-c  { font-family: inherit !important; color: inherit !important;text-shadow: inherit !important;}
 p.hd-css-marker {}
-</style><link href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.min.css" rel="stylesheet"><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script><script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script><link href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.theme-1.3.1.min.css" rel="stylesheet"><script src="HDObjects-min.js"></script><script src="HD-user-scripts.js"></script></head><body style="margin: 0px; padding: 0px; "><div data-role="page" id="aboutpage" data-theme="b"><form data-ajax="false" id="_form_aboutpage"><div id="aboutpage_header1" style="top: 51px; left: 110px; " name="header1"><div id="_aboutpage_header1_div" data-role="header" data-theme="b" data-position="fixed" data-tap-toggle="false"><h1>Imagecalc</h1><a class="ui-btn-left" data-icon="arrow-l">back</a></div></div><div id="aboutpage_div1" style="position: absolute; top: 43px; left: 5%; width: 90%; height: 100px; " data-role="none"><p>Fiverr is a popular marketplace for microjobs, called "gigs".</p>
+</style><link href="jquery.mobile-1.3.1/jquery.mobile.structure-1.3.1.min.css" rel="stylesheet"><script src="jquery-1.9.0/jquery.min.js"></script><script src="jquery.mobile-1.3.1/jquery.mobile-1.3.1.min.js"></script><link href="jquery.mobile-1.3.1/jquery.mobile.theme-1.3.1.min.css" rel="stylesheet"><link rel="stylesheet" type="text/css" href="resource.css"><script src="HDObjects-min.js"></script><script src="HD-user-scripts.js"></script></head><body style="margin: 0px; padding: 0px; "><div data-role="page" id="aboutpage" data-theme="b"><form data-ajax="false" id="_form_aboutpage"><div id="aboutpage_div1" style="position: absolute; top: 43px; left: 5%; width: 90%; height: 100px; " data-role="none"><p>Fiverr is a popular marketplace for microjobs, called "gigs".</p>
 
 <p>This app allows Fiverr sellers to easily calculate the appropriate dimensions for their own gig images.
 It was created as a convenience for other Fiverr sellers by <a href="http://www.fiverr.com/refugeek">Refugeek</a>.</p>
@@ -24,4 +24,4 @@ Don't sue me if the app messes up, I'm a poor seller just like you :)</p>
 <p><strong>Fiverr</strong> is a registrated trademark of <em>Fiverr International Limited</em>. </p>
 
 <p><em>All rights reserved.</em></p>
-</div></form></div></body></html>
+</div><div id="aboutpage_header1" style="top: 51px; left: 110px; " name="header1"><div id="_aboutpage_header1_div" data-role="header" data-theme="b" data-position="fixed" data-tap-toggle="false"><h1>Imagecalc</h1><a class="ui-btn-left" data-icon="arrow-l">back</a></div></div></form></div></body></html>
